--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 Mongo_url='mongodb+srv://tusharsethi:i9vxGdZqenm9ePdS@docs.cicbrcr.mongodb.net/?retryWrites=true&w=majority&appName=docs'
 
 
-Port="https://clone-docs.vercel.app/"
+Port="5000"
