--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
+    "path": "^0.12.7",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
