code changes in index.js, file structure and vercel also

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,8 +1,16 @@
 {
-    "rewrites":[
-        {
-            "source":"/(.*)",
-            "destination":"index.js"
-        }
+    "version": 2,
+    "functions": {
+      "api/index.js": {
+        "runtime": "nodejs14.x"
+      }
+    },
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/api/index.js"
+      }
     ]
-}
+  }
+  
+  
