changes in vercel

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,10 @@
 {
-    "version": 2,
-    "functions": {
-      "api/index.js": {
-        "runtime": "nodejs14.x"
-      }
-    },
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/api/index.js"
-      }
+    "rewrites":[
+        {
+            "source":"/(.*)",
+            "destination":"/api"
+        }
     ]
-  }
+}
   
   
