--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,16 @@
 {
-    "rewrites":[
-        {
-            "source":"/(.*)",
-            "destination":"/api"
-        }
+    "version": 2,
+    "builds": [
+      {
+        "src": "api/index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "api/index.js"
+      }
     ]
-}
-  
+  }
   
